# DrMauro

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  sub_9CFF.asm
assets/: title.psd
assets/panel/: panel
boards/: combo.txt  multiple.txt  test.txt
cmake/: FindSDL2.cmake
include/: AssetManager.h  Bool.h  CIntTypes.h  Color.h  DrMauro.h  Engine.h  ExceptionManager.h  Font.h  Game.h  GameState.h  Graphics.h  InputDevice.h  IntTypes.h  Object.h  Panel3.h  Parameters.h  Random.h  Screen.h  Sprite.h  Texture.h  Timeline.h  Vector.h  Window.h  drmauro.h  game.h  main.h
include/SDL/: SDL_Graphics.h  SDL_InputDevice.h  SDL_Screen.h
include/assets/: Assets.h
include/audio/: AudioManager.h
include/gamelogic/: FileGameBoard.h  GameBoard.h  GameSpeedProvider.h  SinglePlayerGame.h  SinglePlayerGame_State.h
include/graphics/: Box.h  Color.h  Font.h  FragmentedPanel.h  Graphics.h  Palette.h  Sprite.h  Texture.h
include/states/: AudioTestState.h  BootState.h  CommonGameUtils.h  DifficultySelectionGameState.h  InGameState.h  MainMenuGameState.h  MultiPlayerGameState.h  SinglePlayerGameState.h
old/: drmauro.c  drmauro.h
src/: AssetManager.c  Color.c  DrMauro.c  Engine.c  ExceptionManager.c  Font.c  Game.c  Graphics.c  HeapVector.c  Panel3.c  Parameters.c  Random.c  Sprite.c  StackVector.c  Texture.c  Timeline.c  Vector.c  Window.c  drmauro.c  drmauro_main.c  drmauro_main.c.old  game.c  game.c.old  main.c
src/SDL/: SDL_Graphics.c  SDL_InputDevice.c  SDL_Screen.c
src/assets/: BigPill.c  Boxes.c  DSMenuUI.c  DefaultFont.c  Logo.c  MagVirus.c  Mario.c  MenuUI.c  Palettes.c  Panels.c  Pills.c  Sprites.c  VirusLarge.c  Viruses.c
src/gamelogic/: FileGameBoard.c  GameBoard.c  GameSpeedProvider.c  SinglePlayerGame.c
src/graphics/: Box.c  Color.c  FragmentedPanel.c  Sprite.c  Texture.c
src/states/: AudioTestState.c  BootState.c  CommonGameUtils.c  DifficultySelectionGameState.c  InGameState.c  MainManuGameState.c  MultiPlayerGameState.c  SinglePlayerGameState.c
tools/: CMakeLists.txt
tools/boarddesigner/: index.html
tools/charmapgen/: CMakeLists.txt  charmapgen.c
tools/headerize/: CMakeLists.txt  headerize.cpp  headerize.h
tools/imgtool/: CMakeLists.txt  imgtool.c  imgtool.cpp  imgtool.h
